2008-07-20  Andreas Schwab  <schwab@suse.de>

	* syntax.c (find_start_pos, find_start_value)
	(find_start_value_byte, find_start_begv, find_defun_start)
	(back_comment, scan_sexps_forward): Use EMACS_INT for buffer
	positions.

2008-07-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/sol2-3.h: Insert contents of s/sol2.h.
	(LD_SWITCH_SYSTEM): Remove redundant definition.
	* s/sol2.h: Remove, unused.

2008-07-20  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsterm.m (ns_get_color): Recognize HSB,AHSB be synonyms for
	HSV,AHSV.

2008-07-20  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* Makefile.in (ns_appdir): Fix typo in find command.

2008-07-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/intel386.h (NO_REMAP): Do no define for USG, not used.

	* s/usg5-4.h (LIBS_SYSTEM): Remove, system for which this was
	added not supported anymore.

	* s/usg5-4-2.h (LIBS_SYSTEM):
	* s/sol2.h (LIBS_SYSTEM): Do not undefine.

	* s/netbsd.h (GETPGRP_NO_ARG, N_TRELOFF):
	* s/lynxos.h (GETPGRP_NO_ARG):
	* s/hpux10-20.h (NO_SIOCTL_H):
	* s/gnu.h (GETPGRP_NO_ARG):
	* s/gnu-linux.h (NO_SIOCTL_H):
	* s/freebsd.h (GETPGRP_NO_ARG, N_TRELOFF):
	* s/cygwin.h (GETPGRP_NO_ARG):
	* s/irix6-5.h (LIBS_SYSTEM, GETPGRP_NO_ARG): Remove, unused.
	(C_DEBUG_SWITCH): Remove duplicate definition.

	* m/ibms390.h: Remove boilerplate comments.

	* sysdep.c (closedir): Use SOLARIS2 instead of sun && USG5_4.

	* process.c (HAVE_SERIAL): Consolidate ifdefs.
	(wait_reading_process_output): Remove code for SunOS, platform not
	supported anymore.  Use SOLARIS2 instead of sun.

2008-07-19  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* font.c (font_open_by_name): Under NS, default lface height to zero.
	(font_open_for_lface): Under NS, set size based on frame fontsize.
	* nsterm.m (EmacsView-changeFont:): Remove some commented code.
	* frame.c (x_set_frame_parameters): Remove HAVE_NS ifdef.

2008-07-19  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsterm.m (ns_antialias_text, ns_use_qd_smoothing)